<resources>
    <string name="app_name">NoteApp</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save">save</string>
    <string name="profile">Profile</string>

    <string name="date">date</string>
    <string name="task">task</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="start">START</string>
    <string name="clear_prefs">Clear Prefs</string>
    <string name="skip">SKIP</string>
    <string name="exit">Exit</string>
    <string name="sort_by_title">Sort by title</string>
    <string name="sort_by_date">Sort by date</string>
    <string name="type_a_note">Type a Note</string>
    <string name="makhabat_usen">Makhabat Usen</string>
    <string name="android_developer">Android Developer</string>
    <string name="followers">Followers</string>
    <string name="_150k">150K</string>
    <string name="my_works">My Works</string>
    <string name="project_1">PROJECT#1</string>
    <string name="project_2">PROJECT#2</string>
    <string name="desc_1">Desc#1</string>
    <string name="desc_2">Desc#2</string>
    <string name="_5_0">5.0</string>
    <string name="rating">Rating</string>
    <string name="next">NEXT</string>
    <string name="phone_number">Phone number</string>
    <string name="sms_pin">sms PIN</string>
    <string name="confirm">Confirm</string>
    <string name="_00_59">00:59</string>
    <string name="please_check_if_number_is_correct">Please, check if number is correct</string>

</resources>