<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="32dp"
    tools:context=".ui.auth.PhoneFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:id="@+id/view_sms_request"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <com.hbb20.CountryCodePicker
                android:id="@+id/ccp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                app:ccp_autoDetectCountry="true"
                app:ccp_showNameCode="true"
                app:ccp_textSize="16sp" />

            <EditText
                android:id="@+id/et_phone"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:maxLength="9"
                android:textSize="16sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_check_num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/please_check_if_number_is_correct"
            android:textColor="@color/red" />

        <Button
            android:id="@+id/btn_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/next" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/view_pin_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">


        <com.chaos.view.PinView
            android:id="@+id/pin_view"
            style="@style/PinWidget.PinView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:cursorVisible="true"
            android:hint="@string/sms_pin"
            android:inputType="text"
            android:maxLength="6"
            android:padding="10dp"
            android:textColor="@color/blue"
            android:textSize="18sp"
            android:textStyle="bold"
            app:cursorColor="@color/red"
            app:cursorWidth="2dp"
            app:hideLineWhenFilled="true"
            app:itemCount="6"
            app:itemHeight="48dp"
            app:itemRadius="4dp"
            app:itemSpacing="0dp"
            app:itemWidth="48dp"
            app:lineColor="@color/light_blue"
            app:lineWidth="2dp"
            app:viewType="rectangle" />

        <TextView
            android:id="@+id/tv_timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_00_59" />

        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/confirm" />

    </LinearLayout>


</LinearLayout>