<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.makhabatusen.noteapp.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.makhabatusen.noteapp.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.makhabatusen.noteapp.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/formFragment"
        android:name="com.makhabatusen.noteapp.ui.form.FormFragment"
        android:label="fragment_form"
        tools:layout="@layout/fragment_form" />
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.makhabatusen.noteapp.ui.profile.ProfileFragment"
        android:label="fragment_profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/boardFragment"
        android:name="com.makhabatusen.noteapp.ui.board.BoardFragment"
        android:label="fragment_board"
        tools:layout="@layout/fragment_board" />
    <fragment
        android:id="@+id/phoneFragment"
        android:name="com.makhabatusen.noteapp.ui.auth.PhoneFragment"
        android:label="phone"
        tools:layout="@layout/fragment_phone" />

</navigation>